@@ -21,7 +21,7 @@ depending on tag or format. They may also be entirely different objects
 for certain keys, again depending on format.
 """
 
-version = (1, 6)
+version = (1, 7)
 version_string = ".".join(map(str, version))
 
 import warnings
